--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.17.0",
     "mssql": "^6.3.1",
     "mysql": "^2.18.1",
+    "newman": "^5.3.0",
     "sqlite3": "^5.0.2",
     "stripe": "^8.150.0"
   },
