--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "@vonage/server-sdk": "^2.10.10",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
@@ -17,7 +18,6 @@
     "sqlite3": "^5.0.2",
     "stripe": "^8.150.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "newman run tests/postman/Receptia.postman_collection.json",
     "start": "node server.js"
