--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "jest-cucumber": "^3.0.1",
     "mssql": "^6.3.1",
     "mysql": "^2.18.1",
     "newman": "^5.3.0",
     "sqlite3": "^5.0.2",
-    "stripe": "^8.150.0"
+    "stripe": "^8.150.0",
+    "supertest": "^6.2.1"
   },
   "scripts": {
-    "test": "newman run tests/postman/Receptia.postman_collection.json",
+    "postman": "newman run tests/postman/Receptia.postman_collection.json",
+    "supertest": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -31,5 +34,10 @@
   "bugs": {
     "url": "https://github.com/WeeHorse/receptia-multidb-backend/issues"
   },
-  "homepage": "https://github.com/WeeHorse/receptia-multidb-backend#readme"
+  "homepage": "https://github.com/WeeHorse/receptia-multidb-backend#readme",
+  "jest":{
+    "testMatch": [
+      "**/*.steps.js"
+    ]
+  }
 }
