--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,30 +11,15 @@ jobs:
     steps:
       - name: Configure SSH
         run: |
-          mkdir -p ~/.ssh/
-          echo "$SSH_KEY" > ~/.ssh/production.key
-          chmod 600 ~/.ssh/production.key
-          cat >>~/.ssh/config <<END
-          Host production
-            HostName $SSH_HOST
-            User $SSH_USER
-            IdentityFile ~/.ssh/production.key
-            StrictHostKeyChecking no
-          END
-        env:
-          SSH_USER: ${{ secrets.PRODUCTION_SSH_USER }}
-          SSH_KEY: ${{ secrets.PRODUCTION_SSH_KEY }}
-          SSH_HOST: ${{ secrets.PRODUCTION_SSH_HOST }}
-
+          install -m 600 -D /dev/null ~/.ssh/id_rsa
+          echo "${{ secrets.PRODUCTION_SSH_KEY }}" > ~/.ssh/id_rsa
+          echo "${{ secrets.PRODUCTION_SSH_HOST }}" > ~/.ssh/known_hosts
       - name: Navigate to project
-        run: ssh production 'sudo cd /var/www/receptia-multidb-backend'
-        
+        run: cd /var/www/receptia-multidb-backend
       - name: Stop the server
-        run: ssh production 'sudo pm2 stop receptia'
-
+        run: pm2 stop receptia
       - name: Check out the source
-        run: ssh production 'sudo git fetch && git reset --hard origin/release'
-
+        run: git fetch && git reset --hard origin/release
       - name: Start the server
         if: ${{ always() }}
-        run: ssh production 'sudo pm2 restart receptia'
+        run: sudo pm2 restart receptia
