--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,33 +9,20 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/release'
     # needs: test
     steps:
-      - name: Configure SSH
-        run: |
-          mkdir -p ~/.ssh/
-          echo "$SSH_KEY" > ~/.ssh/id_rsa
-          echo "$SSH_HOST" > ~/.ssh/known_hosts
-          chmod 600 ~/.ssh/id_rsa
-          cat >>~/.ssh/config <<END
-          Host production
-            HostName $SSH_HOST
-            User $SSH_USER
-            IdentityFile ~/.ssh/id_rsa
-            StrictHostKeyChecking no
-          END
-        env:
-          SSH_USER: ${{ secrets.PRODUCTION_SSH_USER }}
-          SSH_KEY: ${{ secrets.PRODUCTION_SSH_KEY }}
-          SSH_HOST: ${{ secrets.PRODUCTION_SSH_HOST }}
-
+      - name: Install SSH key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          name: production
+          key: ${{ secrets.PRODUCTION_SSH_KEY }}
+          known_hosts: 'temp placeholder actual value added just below'
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.PRODUCTION_SSH_HOST }} >> ~/.ssh/known_hosts
       - name: Navigate to project
         run: ssh production 'sudo cd /var/www/receptia-multidb-backend'
-        
       - name: Stop the server
         run: ssh production 'sudo pm2 stop receptia'
-
       - name: Check out the source
         run: ssh production 'sudo git fetch && git reset --hard origin/release'
-
       - name: Start the server
         if: ${{ always() }}
         run: ssh production 'sudo pm2 restart receptia'
