--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,19 +2,17 @@ name: CI
 on:
   push:
     branches: [ release ]
-
 jobs:
-  deploy:    
+
+  deploy:
+    name: Deploy release branch on production
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Deploy source-code
-        uses: appleboy/scp-action@master
-        env:
-          HOST: ${{ secrets.PRODUCTION_SSH_HOST }}
-          USERNAME: ${{ secrets.PRODUCTION_SSH_USER }}
-          PORT: 22
-          PASSWORD: ${{ secrets.PRODUCTION_SSH_PASSWORD }}
-        with:
-          source: "*"
-          target: "/var/www/receptia-multidb-backend"
+    - name: execute remote script over ssh
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.PRODUCTION_SSH_HOST }}
+        username: ${{ secrets.PRODUCTION_SSH_USER }}
+        key: ${{ secrets.PRODUCTION_SSH_PRIVATE_KEY }}
+        port: 22
+        script: sh /var/www/receptia-multidb-backend/deploy.sh
