--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,37 @@
 name: CI
-on:
-  push:
-    branches: [ release ]
+on: [push, pull_request]
 jobs:
-
+  # test:
+  #   ...
   deploy:
-    name: Deploy release branch on production
+    name: "Deploy to staging"
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/release'
+    # needs: test
     steps:
-    - name: execute remote script over ssh
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.PRODUCTION_SSH_HOST }}
-        username: ${{ secrets.PRODUCTION_SSH_USER }}
-        password: ${{ secrets.PRODUCTION_SSH_PASSWORD }}
-        port: 22
-        script: sh /var/www/receptia-multidb-backend/deploy.sh
+      - name: Configure SSH
+        run: |
+          mkdir -p ~/.ssh/
+          echo "$SSH_KEY" > ~/.ssh/staging.key
+          chmod 600 ~/.ssh/staging.key
+          cat >>~/.ssh/config <<END
+          Host staging
+            HostName $SSH_HOST
+            User $SSH_USER
+            IdentityFile ~/.ssh/staging.key
+            StrictHostKeyChecking no
+          END
+        env:
+          SSH_USER: ${{ secrets.PRODUCTION_SSH_USER }}
+          SSH_KEY: ${{ secrets.PRODUCTION_SSH_KEY }}
+          SSH_HOST: ${{ secrets.PRODUCTION_SSH_HOST }}
+
+      - name: Stop the server
+        run: ssh staging 'sudo pm2 stop receptia'
+
+      - name: Check out the source
+        run: ssh staging 'cd /var/www/receptia-multidb-backend && git pull'
+
+      - name: Start the server
+        if: ${{ always() }}
+        run: ssh staging 'sudo pm2 restart receptia'
