--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,11 @@ jobs:
           chmod 600 ~/.ssh/staging.key
           cat >>~/.ssh/config <<END
           Host staging
-            HostName $SSH_HOST
-            User $SSH_USER
+            HostName 161.35.200.255
+            User root
             Port 22
             IdentityFile ~/.ssh/staging.key
             StrictHostKeyChecking no
-            LogLevel DEBUG3
           END
         env:
           SSH_USER: ${{ secrets.PRODUCTION_SSH_USER }}
