--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,5 +30,6 @@ jobs:
       - name: Deploy from release
         run: ssh staging 'cd /var/www/receptia-multidb-backend && git fetch && git reset --hard origin/release'
 
-      - name: Run deploy script
-        run: ssh staging './deploy.sh'
+      - name: Restart app (all of pm2 unfortunately)
+        run: ssh staging 'systemctl restart pm2-root.service'
+        
