--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ jobs:
   # test:
   #   ...
   deploy:
-    name: "Deploy to staging"
+    name: "Deploy to production"
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/release'
     # needs: test
@@ -12,14 +12,14 @@ jobs:
       - name: Configure SSH
         run: |
           mkdir -p ~/.ssh/
-          echo "$SSH_KEY" > ~/.ssh/staging.key
-          chmod 600 ~/.ssh/staging.key
+          echo "$SSH_KEY" > ~/.ssh/production.key
+          chmod 600 ~/.ssh/production.key
           cat >>~/.ssh/config <<END
-          Host staging
+          Host production
             HostName 161.35.200.255
             User root
             Port 22
-            IdentityFile ~/.ssh/staging.key
+            IdentityFile ~/.ssh/production.key
             StrictHostKeyChecking no
           END
         env:
@@ -28,8 +28,8 @@ jobs:
           SSH_HOST: ${{ secrets.PRODUCTION_SSH_HOST }}
 
       - name: Deploy from release
-        run: ssh staging 'cd /var/www/receptia-multidb-backend && git fetch && git reset --hard origin/release'
+        run: ssh production 'cd /var/www/receptia-multidb-backend && git fetch && git reset --hard origin/release'
 
       - name: Restart app (all of pm2 unfortunately)
-        run: ssh staging 'systemctl restart pm2-root.service'
-        
+        run: ssh production 'systemctl restart pm2-root.service'
+
